--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
+    "clsx": "^2.1.1",
     "next": "16.1.1",
     "nodemailer": "^7.0.12",
     "react": "19.2.3",
